objects/Case.object
<CustomObject>
    <fields>
        <fullName>Assigned_Support_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Support Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesAssignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Duration__c</fullName>
        <formula>IF( IsClosed ,  ROUND( ClosedDate  -  CreatedDate ,0) ,  ROUND( NOW()  -  CreatedDate ,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer (if different from Contact)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployed_On__c</fullName>
        <label>Deployed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Development_Effort__c</fullName>
        <label>Level Of Effort</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Status__c</fullName>
        <label>Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Additional Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Development_Type__c</fullName>
        <label>Development Type</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rank &amp; Loop List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Merge Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPCR_Number__c</fullName>
        <label>EPCR #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPCR_Required__c</fullName>
        <label>EPCR Required ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Owner__c</fullName>
        <label>IT Owner</label>
        <picklist>
            <picklistValues>
                <fullName>CRM Development</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IT_Support_Ticket__c</fullName>
        <label>IT Support Ticket Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Ticket__c</fullName>
        <label>IT Ticket #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <label>Incident</label>
        <picklist>
            <controllingField>Issue_Type__c</controllingField>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge Duplicate Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Browser Issue/Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slowness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Unlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Update Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add New Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Searching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook Plugin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New User setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Firm name for multiple contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Address for Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change record Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request a List Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request a Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other (Description)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <controllingField>Status_Reason_Assigned_To_Group__c</controllingField>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Additional Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAT Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAT Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Signoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Point_Of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point Of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PointOfContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_Of_Contact_old__c</fullName>
        <label>Point Of Contact Old</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFD Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPP RPS Sales-RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MoneyGuard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annuities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annuity Wire/Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference &amp; Event Planning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>QAT_Resource__c</fullName>
        <label>QAT Approver</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Approved_On__c</fullName>
        <label>QA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Priority__c</fullName>
        <label>Release Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Assigned Resource</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Release_Date__c</fullName>
        <label>Target Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Case_Closure_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Case Closure Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Salesforce_com_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the checkbox were unchecked and you check this, an automatic email is sent to salesforce.com&apos;s Premier Support organization with the support ticket details</description>
        <label>Send to Salesforce.com Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Assigned_To_Group__c</fullName>
        <label>Status Reason / Assigned To Group</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Waiting Admin’s Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Client’s Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Manager’s Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Support Group’s Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAST Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce.com Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In QAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Help Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Priority__c</fullName>
        <label>Support Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_1_Estimate__c</fullName>
        <label>Tier 1 Estimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_Approved_On__c</fullName>
        <label>UAT Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UAT_Resource__c</fullName>
        <label>UAT Approver</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Group_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if request originated from a User Group.</inlineHelpText>
        <label>User Group Request</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Support Tickets</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Today_New_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>IT Development</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Escalated to IT Development</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Resolved,Closed - Unresolved,Closed - Transferred</value>
        </filters>
        <filters>
            <field>Point_Of_Contact_old__c</field>
            <operation>equals</operation>
        </filters>
        <label>New Cases</label>
        <sharedTo>
            <role>Distribution_IT</role>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>